envoy-redis/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: backend_cluster
                            timeout: 0s
                http_filters:
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                                  responses = {}

                                  function envoy_on_request(request_handle)
                                      -- Access the request path
                                      request_path = request_handle:headers():get(":path")
                                      request_handle:logInfo("Received request for path: " .. tostring(request_path))

                                          local saved_response = responses[request_path]
                                          if saved_response then
                                              -- Serve the saved response
                                                 
                                                  -- Serve the saved response
                                                  -- request_handle:respond(headers, saved_response)
                                                  request_handle:logInfo("Served saved response for path: " .. tostring(request_path))
                                                  
                                                  -- Set flag to indicate that response is served
                                                  response_saved = true
                                           return
                                          end
                                              -- No saved response found, continue with the request
                                              request_handle:logInfo("No saved response found for path: " .. tostring(request_path))
                                          

                              
                                   end

                                  function envoy_on_response(response_handle)

                                    if response_saved then
                                        return
                                    end

                                  response_handle:logInfo("inside the response path")
                                  local response_body = response_handle:body()
                                  local response_size = response_handle:body():length()
                                  response_handle:logInfo("Extracted the body " .. tostring(response_size))
                                  response_handle:logInfo("Extracted the body " .. tostring(response_handle:body()))


                                  -- take the path as it is a global variable now
                                  local response_path=request_path

                                  responses[response_path] = response_body
                                  response_handle:logInfo("Saved response for path: " .. tostring(response_path))

                                  -- response_handle:logInfo("Extracted the body size " .. tostring(response_handle:body():length()))
                                  -- response_handle:logInfo("Extracted the body size from the table" .. tostring(responses[request_path]:length()))
                                  -- response_handle:logInfo("Extracted the body " .. tostring(response_handle:bodyChunks()))
          
                                  end



                          



                  - name: envoy.filters.http.router
  clusters:
    - name: backend_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: backend_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: new_go_backend
                      port_value: 8000
